--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "react": "18.3.1",
     "react-native": "0.76.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
